# whaler

./: README.md  setup.cfg  setup.py
src/whaler/: __init__.py  analyser.py  cli.py  utils.py
src/whaler/compose/: build.py  service.py
src/whaler/compose_options/: build.py
