[metadata]
name = whaler
version = whaler.__version__
description = Docker statical analyser for integration tests.
long_description = file: README.md
author = Rodrigo Oliveira Campos
author_email = rodrigo.redcode@gmail.com
url = https://github.com/rodrigocam/whaler

keywords = docker statical analyse
license = MIT
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
platforms = all
include_package_data = True